# YatCC

./: LICENSE-SUPPLEMENTARY.txt  LICENSE.txt  config.cmake  task5_setup.sh  实验报告模板.md
antlr/: setup.sh
llvm/: setup.sh
task/: CMakeLists.txt
task/0/: main.cpp
task/1/: 周子健-23336020-实验1会话记录.md
task/1/antlr/: SYsULexer.g4  main.cpp
task/2/antlr/: Ast2Asg.cpp  Ast2Asg.hpp  SYsULexer.cpp  SYsULexer.tokens  SYsUParser.g4
task/3/: EmitIR.cpp  EmitIR.hpp
task/5/: AllocReg.cpp  AllocReg.h  CMakeLists.txt  EmitAsm.cpp  EmitAsm.h  EmitMIR.cpp  EmitMIR.h  README.md  main.cpp
test/diy-cases/: diy-case1.sysu.c
test/task2/: score.py
test/task3/: CMakeLists.txt  answer.py  score.py
test/task5/: CMakeLists.txt  answer.py  score.py
